<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/weather">

    <TextView
        android:id="@+id/tvHighScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnContinueGame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="60dp"
        android:text="@string/highscore"
        android:textSize="16dp"/>

    <Button
        android:id="@+id/btnContinueGame"
        style="@style/strokeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/btnNewGame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/continue_game"/>

    <Button
        android:id="@+id/btnNewGame"
        style="@style/strokeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/new_game"/>

    <Button
        android:id="@+id/btnReset"
        style="@style/strokeButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/btnNewGame"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:text="@string/button_reset"/>

</RelativeLayout>