<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:background="@drawable/weather">
                <!--android:background="#2bd3ce"-->


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:id="@+id/linlayout2">
        <Button
            android:textSize="12sp"
            android:layout_marginTop="5dp"
            android:layout_marginRight="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAnswer"
            android:text="@string/show_answer_button"
            android:clickable="true"
            style="?android:buttonBarStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tvScore"
            android:layout_marginTop="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="150dp"
            android:textSize="12sp"
            android:text="@string/score"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:id="@+id/tvAnswer"
        android:padding="24dp"
        android:layout_above="@+id/tvQuestions"
        android:layout_centerHorizontal="true"/>
    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:background="@drawable/separator"
        android:layout_below="@id/linlayout2"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:id="@+id/tvQuestions"
        android:background="@drawable/rect_button"
        android:layout_above="@+id/linlayout1"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"/>
    <!--<View-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="3dp"-->
        <!--android:background="@drawable/separator"-->
        <!--android:layout_below="@id/tvQuestions"/>-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:id="@+id/linlayout1"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="30dp">
        <Button
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/true_button"
            android:id="@+id/true_button"
            android:layout_weight="1"
            android:layout_marginRight="5dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/rect_button"
            android:clickable="true" />
        <Button
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/false_button"
            android:id="@+id/false_button"
            android:layout_weight="1"
            android:layout_marginRight="30dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="30dp"
            android:clickable="true"
            android:background="@drawable/rect_button"/>
    </LinearLayout>
</RelativeLayout>
